--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .container {
-    background-color: #c00025;
+    background-color: pink;
     width: 100%;
     max-width: 550px;
     height: 710px;
@@ -9,16 +9,19 @@
     position: relative;
 }
 .display {
-    margin-top: 25px;
+    margin: 15px;
     padding-right: 8%;
     font-size: 5.0rem;
+    background-color: rgb(231, 22, 151);
+    border-radius: 10px;
 }
 
 .specials-container {
     display: flex;
     width: 70%;
     justify-content: space-around;
-    margin: 2% 1%;
+    margin: 0 auto;
+
 }
 
 .special-button {
@@ -27,8 +30,8 @@
     border-radius: 50%;
     border: 1px solid steelblue;
     font-size: 1.5rem;
-    color: white;
-    background-color: steelblue;
+    color: black;
+    background-color: rgb(1, 245, 253);
     box-shadow: 1px 5px black; 
 }
 
@@ -44,16 +47,17 @@
     width: 100px;
     height: 100px;
     border-radius: 50%;
-    border: 1px solid darkblue;
+    border: 1px solid rgb(10, 207, 76);
     font-size: 1.5rem;
-    color: white;
-    background-color: darkblue;
+    color: black;
+    background-color: rgb(10, 238, 131);
     box-shadow: 1px 5px black;
     margin-top: 2%;
 }
 .zero-button {
     width: 220px;
     border-radius: 50px;
+    padding: 10px;
 }
 .operator-button {
     width: 75px;
@@ -61,8 +65,8 @@
     border-radius: 50%;
     border: 1px solid teal;
     font-size: 2rem;
-    color: white;
-    background-color: teal;
+    color: black;
+    background-color: rgb(250, 246, 7);
     box-shadow: 1px 5px black;
     margin: 25px 0 10px 30px;
 }
